cyrus-lyrics-api/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: cyrus-lyrics-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: cyrus-lyrics-api
        image: alkrauss48/cyrus-lyrics-api:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "50Mi"
            cpu: "5m"
          limits:
            memory: "100Mi"
            cpu: "20m"
        livenessProbe:
          httpGet:
            path: /sheets/default
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: cyrus-lyrics-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: app
